<resources>
    <string name="app_name">Kursinis</string>
    <string name="action_settings">Settings</string>
    <string name="lankomumasText">Lankomumas</string>
    <string name="klausimasText">klausimas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="formLabel">Užsiregistravimas</string>
    <string name="pasizymPask">Pasižymėti paskaitoje</string>
    <string name="Surname">Pavardė</string>
    <string name="Name">Vardas</string>
    <string name="StudNumber">Studento numeris</string>
    <string name="noStudentNrText">Prašome įrašyti studento numerį</string>
    <string name="alreadyInClass">Jūs jau užsiregistravęs.</string>
    <string name="afterLogin">Jūs sėkmingai užregistruotas</string>
    <string name="internetConn">prašome prisijungti prie interneto</string>
    <string name="answerQuest">Atsakyti į klausimą</string>
    <string name="Answer">Atsakymas į klausimą</string>
    <string-array name="lectures_array">
        <item>Geografinės informacinės sistemos</item>
        <item>Prigramų sistemų inžinerija</item>
        <item>Prigramų sistemų inžinerija 2</item>
    </string-array>
    <string-array name="lectures_code_array">
        <item>MIFGIS</item>
        <item>MIFPSI</item>
        <item>MIFPSI2</item>
    </string-array>
    <string name="questionName">Paskaitos klausimas:\nKoks ..?\nKas ..?\nKaip ..?\nKodel ..?\nKada ..?\nIšverskite: \'
        An essay is, generally, a scholarly piece of writing that gives the author\'s own argument—but the definition is
        vague, overlapping with those of an article, a pamphlet, and a short story.\'?</string>
    <string name="questionLabel">Klausimas</string>
</resources>
