<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="lt.vu.mif.www.kursinis.QuestionActivityFragment"
    tools:showIn="@layout/question_activity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questionName"
                android:id="@+id/questionTextView"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:lines="8"
                android:minLines="3"
                android:gravity="top|left"
                android:maxLines="10"
                android:hint="@string/Answer"
                android:id="@+id/answerText"
                android:layout_below="@+id/questionTextView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerQuest"
                android:id="@+id/execButton"
                android:layout_below="@+id/answerText"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />
        </RelativeLayout>


</ScrollView>